[gd_scene load_steps=7 format=3 uid="uid://dk3kbab764mfm"]

[ext_resource type="Script" path="res://scripts/player_basic_sword.gd" id="1_dal0q"]
[ext_resource type="Texture2D" uid="uid://d1231j47ufxyi" path="res://resources/png/Sprite-0001.png" id="2_iww6a"]
[ext_resource type="Texture2D" uid="uid://caix2xjqjefdq" path="res://resources/png/sword.png" id="3_7lydl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e7xlr"]
size = Vector2(104, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_76d02"]
size = Vector2(64, 32)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_jn5bc"]
angle_min = -720.0
angle_max = 720.0
inherit_velocity_ratio = 1.0
spread = 180.0
initial_velocity_max = 129.03
gravity = Vector3(0, 98, 0)

[node name="playerBasicSword" type="Node2D"]
script = ExtResource("1_dal0q")

[node name="attackTimer" type="Timer" parent="."]
wait_time = 0.15

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
offset_top = -8.0
offset_right = 48.0
offset_bottom = 8.0
metadata/_edit_use_anchors_ = true

[node name="ColorRect2" type="ColorRect" parent="."]
visible = false
offset_left = 48.0
offset_top = -16.0
offset_right = 104.0
offset_bottom = 16.0
metadata/_edit_use_anchors_ = true

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(24, 0)
collision_layer = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(28, 0)
shape = SubResource("RectangleShape2D_e7xlr")

[node name="pokoArea" type="Area2D" parent="."]
collision_layer = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="pokoArea"]
position = Vector2(80, 0)
shape = SubResource("RectangleShape2D_76d02")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(104, 0)
emitting = false
amount = 16
process_material = SubResource("ParticleProcessMaterial_jn5bc")
texture = ExtResource("2_iww6a")
lifetime = 4.0
one_shot = true
speed_scale = 3.0
explosiveness = 1.0

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(66, 2)
scale = Vector2(3.00125, 2)
texture = ExtResource("3_7lydl")

[connection signal="timeout" from="attackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="body_entered" from="pokoArea" to="." method="_on_poko_area_body_entered"]
